added a GitHub URL link in Href in Footer.

--- a/SmartHealthPredication/SmartHealthPredication/HomeMasterPage.Master
+++ b/SmartHealthPredication/SmartHealthPredication/HomeMasterPage.Master
@@ -87,7 +87,7 @@
 
                     <h3><strong>SOCIAL PRESENCE</strong> </h3>
                     We love to be social,Catch Us On
-                <a href="#">
+                <a href="https://github.com/priyanshi113" target="_blank">
                     <h4> GitHub </h4>
                 </a>
 
