--- a/SmartHealthPredication/SmartHealthPredication/PaitentMasterPage.Master
+++ b/SmartHealthPredication/SmartHealthPredication/PaitentMasterPage.Master
@@ -12,7 +12,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <![endif]-->
     <link rel="shortcut icon" href="assets/img/Svg/health-care.png" />
-    <title>Smart Health Predication</title>
+    <title>Smart Health Prediction</title>
 
     <!-- BOOTSTRAP CORE STYLE  -->
     <link href="assets/css/bootstrap.css" rel="stylesheet" />
@@ -44,8 +44,8 @@
                                 <span class="icon-bar" style="background-color: white"></span>
                             </button>
                             <a class="navbar-brand" href="Home"></a>
-                            <%-- <img src="assets/img/Svg/health-care.png" /><b>SMART HEALTH PREDICATION</b>--%>
-                            <asp:ImageButton ID="imglogo" runat="server" ValidationGroup="imglogo" ImageUrl="assets/img/Svg/health-care.png" /><b>SMART HEALTH PREDICATION</b>
+                            <%-- <img src="assets/img/Svg/health-care.png" /><b>SMART HEALTH PREDICTION</b>--%>
+                            <asp:ImageButton ID="imglogo" runat="server" ValidationGroup="imglogo" ImageUrl="assets/img/Svg/health-care.png" /><b>SMART HEALTH PREDICTION</b>
                         </div>
                         <div class="navbar-collapse collapse ">
                             <ul id="menu-top" class="nav navbar-nav navbar-right">
@@ -86,8 +86,8 @@
 
                     <h3><strong>SOCIAL PRESENCE</strong> </h3>
                     We love to be social,Catch Us On
-                <a href="#">
-                    <h4>FACEBOOK </h4>
+                <a href="https://github.com/priyanshi113">
+                    <h4> GitHub </h4>
                 </a>
 
 
@@ -106,7 +106,7 @@
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <hr />
                      <div style="text-align: right; padding: 5px;">
-                        &copy;2017 Smart Health Predication | Designed By: <a href="https://plus.google.com/u/0/115073175725863104998" style="color: #fff;" target="_blank">Rajan Mistry</a>
+                        &copy;2024 Smart Health Prediction | Designed By: <a href="https://github.com/priyanshi113" style="color: #fff;" target="_blank">Priyanshi Maisuria</a>
                     </div>
                 </div>
             </div>
